--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.15.5",
         "alpinejs": "^3.15.5",
-        "@alpinejs/collapse": "^3.15.5"
+        "intl-tel-input": "^26.0.9"
     }
 }
